fixed re tag wrap

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6596,8 +6596,7 @@ a:active {
     .blog-post .post-content .content p, .blog-post .post-content .content h1, .blog-post .post-content .content h2, .blog-post .post-content .content h3, .blog-post .post-content .content h4 {
       color: black; }
     .blog-post .post-content pre {
-      font-size: 1.3em;
-      padding: 0 50px; }
+      font-size: 1.3em; }
       .blog-post .post-content pre code {
         font-size: inherit;
         white-space: pre;
