--- a/resources/assets/sass/blog/post.scss
+++ b/resources/assets/sass/blog/post.scss
@@ -83,7 +83,7 @@
     pre {
 
       font-size: 1.3em;
-      padding: 0 50px;
+      
       code {
         font-size: inherit;
         white-space: pre;
